--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,19 +19,38 @@
 .cards-container {
   display: flex;
   flex-wrap: wrap;
-  justify-content:center ;
+  justify-content: center;
   list-style: none;
 }
-.card-wrapper{
+.card-wrapper {
   margin: 10px;
 }
 
 .card-container {
+  width: 250px;
   border: 1px solid black;
 }
-
+.card-photo-wrapper {
+  width: inherit;
+  position: relative;
+  height: 250px;
+}
+.card-photo-wrapper > * {
+  width: inherit;
+  height: inherit;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  position: absolute;
+}
+.card-initials {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 5rem;
+}
 .card-photo {
-  width: 200px;
   height: 250px;
   object-fit: cover;
   object-position: top;
